<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRoom">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="658dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/AddNumberRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/AddNumberRoom"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/AddFloor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/AddNumberFloor"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/addFurniture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/AddFurniture"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/AddMaxCountLeaver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/AddNMaxCountLeaver"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/addCountLeaver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/AddCountLeaver"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/btn_AddRoom"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:onClick="OnAddRoomClick"
                    android:text="@string/btn_AddRoom" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>