<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_AddStudent"
                android:layout_width="wrap_content"
                android:layout_height="228dp"
                android:layout_weight="1"
                android:onClick="onClickNewStudent"
                android:text="@string/Student" />

            <Button
                android:id="@+id/btn_AddRoom"
                android:layout_width="wrap_content"
                android:layout_height="228dp"
                android:layout_weight="1"
                android:onClick="OnClickAddRoom"
                android:text="@string/Rooms" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/NewViolation"
                android:layout_width="wrap_content"
                android:layout_height="213dp"
                android:layout_weight="1"
                android:onClick="NewViolation"
                android:text="@string/Violation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="StudentViolation"
                android:text="@string/StudentViolation" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>